# bristlenose

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .tool-versions  .weblate  ACKNOWLEDGEMENTS.md  BASH_AUDIT.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CONTRIBUTING.md  DEVELOPMENT.md  HOWTO.md  INSTALL.md  README.md  SECURITY.md  THIRD-PARTY-BINARIES.md  TODO.md  TRANSLATING.md  bristlenose-todo-summary.md  colour-adjudicator.html  index.html  mockup-codebook-badges.html  mockup-codebook-panel.html  mockup-tag-placement.html  pyproject.toml  scratch_simplify_demo.py
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: a11y-review.md  app-store-police.md  cassandra.md  code-review.md  design-doc-review.md  docs-review.md  i18n-review.md  perf-review.md  security-review.md  silent-failure-hunter.md  user-documentation-review.md  (+5 more)
.github/: dependabot.yml
bristlenose/: __init__.py  _build.py  board_palette.py  cli.py  config.py  cost.py  coverage.py  credentials.py  credentials_linux.py  credentials_macos.py  doctor.py  doctor_fixes.py  events.py  hashing.py  i18n.py  logging.py  manifest.py  miro_board.py  miro_client.py  miro_render_svg.py  models.py  ollama.py  output_paths.py  people.py  pipeline.py  providers.py  run_lifecycle.py  shoal.py  shoal_feed.py  status.py  timing.py  ui_kinds.py
desktop/: CLAUDE.md  README.md  bristlenose-ffmpeg.entitlements  bristlenose-sidecar.PrivacyInfo.xcprivacy  bristlenose-sidecar.entitlements  bristlenose-sidecar.spec  sidecar_entry.py
docs/: ARCHITECTURE.md  BRANCHES.md  CHANGELOG-serve.md  ROADMAP.md  a11y-audit-quotes-page.md  academic-sources.html  adding-a-language.md  bibliography-flocking.md  dependency-premortem-log.md  design-about-panel.md  design-acceptance-matrix.md  design-analysis-future.md  design-architecture-improvements.md  design-asr-backend-strategy.md  design-autocode-threshold-review.md  design-autocode.md  design-badge-action-pill.md  design-board-integrations.md  design-breathing-logotype.md  design-ci.md  design-cli-analysis-register.md  design-cli-improvements.md  design-cli-just-works.md  design-cli-provider-selection.md  design-cli-session-matching.md  design-cli-text-mode.md  design-close-quote-affordance.md  design-codebook-autocomplete.md  design-codebook-ecosystem.md  design-codebook-island.md  design-codebook-kuniavsky.md  design-codebook-library.md  design-codebook.md  design-consequence-storyboarding.md  design-content-density.md  design-cost-forecast-phase1.md  design-curation-persistence-plan.md  design-curation-persistence.md  design-dashboard-navigation.md  design-dashboard-stats.md  (+173 more)
e2e/: .gitignore  ALLOWLIST.md  package-lock.json  package.json  playwright.config.ts  playwright.stress.config.ts  tsconfig.json
experiments/: README.md  focus-selection-styles-v2.html  focus-selection-styles-v3.html  focus-selection-styles.html  ja-glossary-research.md  segment_proximity_analysis.py
frontend/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  visual-diff.html  vite.config.ts
gourani/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
man/: bristlenose.1
scripts/: app.bristlenose.sync-weeknotes.plist  audit-css.py  bump-version.py  check-locales.py  check-tracked-vs-gitignore.sh  compare-render.sh  compare-runs.py  dev.sh  download-fossda.sh  generate-app-icons.py  generate-stress-fixture.py  generate-third-party-binaries.py  perf-breakdown.py  perf-history.sh  perf-stress.sh  populate-gh-project.py  prep-logo-assets.sh  scrape-apple-corpus.py  scrape-hig.py  seed-zh-hant-hk.py  stress-tag-fixture.py  sync-100days-mark-done.py  sync-100days-new.py  sync-100days-status.py  sync-weeknotes.py  sync_100days.py
server/: README.md  feedback.php
snap/: snapcraft.yaml
tests/: conftest.py  server_fixtures.py  test_acceptance_invariants.py  test_analysis_flags.py  test_analysis_generic_matrix.py  test_analysis_generic_signals.py  test_analysis_integration.py  test_analysis_matrix.py  test_analysis_metrics.py  test_analysis_signals.py  test_appledouble_filter.py  test_autocode_discrimination.py  test_autocode_engine.py  test_autocode_models.py  test_autocode_taxonomy.py  test_billing_hints.py  test_bundled_binary.py  test_cli_codebooks.py  test_cli_message_kinds.py  test_cli_output.py  test_clip_backend.py  test_clip_manifest.py  test_codebook_builder.py  test_codebook_loader.py  test_cohort_normalise.py  test_color_contract.py  test_cost.py  test_coverage.py  test_credentials.py  test_curation_migration.py  test_curation_roundtrip.py  test_dark_mode.py  test_dashboard_coverage.py  test_desktop_config_resolution.py  test_doctor.py  test_editable_headings.py  test_elaboration.py  test_events.py  test_export_core.py  test_extract_audio.py  (+93 more)
website/: .htaccess  draft text for www.bristlenose.app.md  feedback.php  index.html  manual.html  server-endpoints.md  style.css  telemetry.php
(+1247 files in other folders)
