[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bristlenose"
dynamic = ["version"]
description = "User-research transcription and quote extraction engine"
authors = [{name = "Martin Storey", email = "martin@cassiocassio.co.uk"}]
requires-python = ">=3.10"
license = "AGPL-3.0-only"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "typer[all]>=0.12",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "faster-whisper>=1.0",
    "pysrt>=1.1",
    "webvtt-py>=0.5",
    "python-docx>=1.1",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "anthropic>=0.39",
    "openai>=1.50",
    "google-genai>=1.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
# Each extra answers two questions: WHEN it's installed (CLI install /
# contributor venv / release machine / Mac-only build) and WHERE it
# lands (runtime in the .app bundle / dev venv only / build-time only).
# Keep version specifiers as floor-only (>=) to match the rest of the
# project's "no upper bounds, bump deliberately" cadence.

# Apple Silicon transcription. Pulled in by Mac users who want MLX
# Whisper as their transcription backend (faster than ctranslate2 on
# arm64). Ships in the desktop sidecar bundle. Linux/Windows users
# never install this; faster-whisper (in core deps) is the default.
apple = [
    "mlx>=0.16",
    "mlx-whisper>=0.4",
]

# Contributor dev environment — tests, lint, types. Adds Mac-only MLX
# packages on Apple Silicon so transcription tests don't skip locally
# (CI runs Linux and skips MLX gracefully). Not installed by end users,
# not shipped in the sidecar bundle.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "httpx>=0.27",
    "mlx>=0.16; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "mlx-whisper>=0.4; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

# Serve mode runtime — `bristlenose serve`, the FastAPI + SQLite
# backend that powers both the HTML report's interactive features and
# the macOS app's WKWebView. Pulled in by anyone running serve mode
# from the CLI; bundled into the desktop sidecar (PyInstaller spec
# lists these as hiddenimports too). Linux/Windows CLI users running
# `bristlenose run` only (no serve) can skip this extra.
serve = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "sqladmin>=0.20",
    "openpyxl>=3.1",
    "alembic>=1.13",
]

# Release-time tooling. Run on the release machine when cutting a
# version (THIRD-PARTY-BINARIES.md auto-generation, etc.). Not a
# runtime dep, not in the sidecar bundle, not needed by contributors.
release = [
    "pip-licenses>=5.0",
]

# macOS desktop sidecar build tooling. Run on the Mac where the
# `.app` is being built — produces the PyInstaller --onedir bundle
# that ships inside `Bristlenose.app/Contents/Resources/bristlenose-sidecar/`.
# Not a runtime dep, not in the bundle itself (the bundle IS its
# output), not needed by Linux/Windows contributors or CLI-only users.
# Required by `desktop/scripts/build-sidecar.sh`.
#
# PyInstaller version is pinned-floor: the spec is empirically
# validated against a specific bundle layout (e.g. the disable-library-
# validation entitlement story in docs/design-desktop-python-runtime.md
# depends on how PyInstaller bundles `Python.framework`). Bump
# deliberately and re-run the C0/C1 retest, don't track latest.
desktop = [
    "pyinstaller>=6.10",
]

[project.scripts]
bristlenose = "bristlenose.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bristlenose"]

[tool.hatch.build]
artifacts = ["bristlenose/theme/**/*.css", "bristlenose/theme/**/*.js", "bristlenose/theme/**/*.png", "bristlenose/theme/**/*.html", "bristlenose/data/*", "bristlenose/server/static/**", "bristlenose/llm/prompts/*.md"]

[tool.hatch.version]
path = "bristlenose/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [".claude/", "trial-runs/", "tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["e2e"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
unfixable = ["F401"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests that call real LLMs (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["bristlenose"]
omit = [
    "bristlenose/stages/s12_render/*",  # deprecated static renderer
]

[tool.coverage.report]
show_missing = true
skip_empty = true
